<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">SafeWalk</string>
    <string name="server">Server</string>
    <string name="client">Client</string>
    <string name="submit">Submit</string>
    <string name="match">Match</string>
    <string name="start_over">Start Over</string>
    <string name="default_host">10.0.2.2</string>
    <string name="default_port">8888</string>
    <string name="default_command">:FAKE_COMMAND</string>
    <string name="host">Host</string>
    <string name="port">Port</string>
    <string name="name">Name</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="preferences">Preferences</string>
    <string name="either">I have no preference being a requester or volunteer</string>
    <string name="requester">I am a requester. Match me with volunteers only.</string>
    <string name="volunteer">I am a volunteer. Do not match me with other volunteers</string>
    
</resources>