<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="edu.purdue.sharm173.MainActivity" >

    <!-- TODO your layout here -->

    <Button
        android:id="@+id/bu_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:enabled="true"
        android:gravity="center"
        android:minHeight="60dp"
        android:minWidth="100dp"
        android:onClick="onSubmit"
        android:padding="@dimen/padding"
        android:text="@string/submit" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/bu_submit"
        android:ems="10" android:inputType="text">

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/editText1"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_centerVertical="true"
        android:text="@string/from"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/textView1"
        android:layout_marginTop="75dp"
        android:text="@string/preferences"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_toRightOf="@+id/textView4" >

        <RadioButton
            android:id="@+id/radio1"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:checked="true"
            android:text="@string/requester" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="274dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/volunteer" />

        <RadioButton
            android:id="@+id/radio0"
            android:layout_width="283dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="71dp"
            android:text="@string/either" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView2"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="125dp"
        android:text="@string/to"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Spinner
        android:id="@+id/spinner2"
        android:entries="@array/location_array2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="58dp" />

    <Spinner
        android:id="@+id/spinner1"
        android:entries="@array/location_array"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView3"
        android:layout_marginTop="35dp"/>

</RelativeLayout>